Error fix
In contact form the ham burger is not showing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,60 +1,61 @@
 @media only screen and (max-width: 1140px) {
-  .nav-list {
-    flex-direction: column;
-  }
-  .box-main {
-    flex-direction: column-reverse;
-    max-width: 100%;
-  }
-  .navbar {
-    flex-direction: column;
-    transition: all 0.1s linear;
-    height: 550px;
-  }
-  .burger {
-    display: inline-block;
-    cursor: pointer;
-  }
-  .h-nav-resp {
-    height: 80px;
-  }
-  .v-class-resp{
-    opacity: 0%;
-    pointer-events: none;
-  }
-  #first-p {
-    font-size: 20px;
-    font-family: 'Luckiest Guy', cursive;
-  }
-  h3 {
-    font-size: 30px;
-    font-family: 'Luckiest Guy', cursive;
-  }
-  .img {
-    max-width: 200px;
-    border: 4px solid white;
-    border-radius: 150px;
-    display: block;
-    margin: auto;
-  }
-  .sec2 {
-    overflow: hidden;
-  }
-  .img-notice img {
-    width: 250px;
-    height: 100px;
-    border-radius: 0;
-    margin-bottom: 30px;
-  }
-  #clockcontainer {
-    height: 40vw;
-    width: 40vw;
-  }
-  table, th, td {
-    font-size: 2vh;
-  }
-  .fouth-notes {
-    padding: 10px;
-  }
-  
+    .nav-list {
+        flex-direction: column;
+    }
+    .box-main {
+        flex-direction: column-reverse;
+        max-width: 100%;
+    }
+    .navbar {
+        flex-direction: column;
+        transition: all 0.1s linear;
+        height: 550px;
+    }
+    .burger {
+        display: inline-block;
+        cursor: pointer;
+    }
+    .h-nav-resp {
+        height: 80px;
+    }
+    .v-class-resp {
+        opacity: 0%;
+        pointer-events: none;
+    }
+    #first-p {
+        font-size: 20px;
+        font-family: 'Luckiest Guy', cursive;
+    }
+    h3 {
+        font-size: 30px;
+        font-family: 'Luckiest Guy', cursive;
+    }
+    .img {
+        max-width: 200px;
+        border: 4px solid white;
+        border-radius: 150px;
+        display: block;
+        margin: auto;
+    }
+    .sec2 {
+        overflow: hidden;
+    }
+    .img-notice img {
+        width: 250px;
+        height: 100px;
+        border-radius: 0;
+        margin-bottom: 30px;
+    }
+    #clockcontainer {
+        height: 40vw;
+        width: 40vw;
+    }
+    table,
+    th,
+    td {
+        font-size: 2vh;
+    }
+    .fouth-notes {
+        padding: 10px;
+    }
 }
