--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ nav {
 .bar3 {
     width: 35px;
     height: 5px;
-    background-color: #333;
+    background-color: rgb(255, 255, 255);
     margin: 6px 0;
     transition: 0.4s;
 }
